# evm-analyzer

./: .env.example  .gitattributes  .gitignore  .ocamlinit  README.md  evm-analyzer.opam  evm_analyzer.opam
datalog/: clauses.pl
results/: integer-overflow.jsonl  locked-ether.jsonl  reentrancy.jsonl  tod.jsonl  unhandled-exception-final.json  unhandled-exception.jsonl
scripts/: create_generated_module.sh  embed_text_files.sh
src/: bigInt.ml  bigInt.mli  channel.ml  cli.ml  commands.ml  commands.mli  db.ml  db.mli  dune  eStack.ml  eStack.mli  ethRpc.ml  ethRpc.mli  ethTypes.ml  ethUtil.ml  ethUtil.mli  factDb.ml  factDb.mli  gas.ml  gas.mli  logger.ml  logger.mli  op.ml  opcode.ml  opcodeParser.ml  opcodeParser.mli  pgDb.ml  pgDb.mli  pgMonad.ml  pgMonad.mli  program.ml  program.mli  reentrantCall.ml  reentrantCall.mli  resultsAnalyzer.ml  resultsAnalyzer.mli  sourcemap.ml  sourcemap.mli  stack.ml  stack.mli  (+14 more)
test/: dune  test.ml  testOpcodeParser.ml  testTraceParser.ml  testable.ml
test/fixtures/: 0x358966246831719c1fa1a2c4bbbc96ecba78e286238d48fe2fe7eba9ea2847f3-overflow.json  privatenet-safe-call-sender.json  privatenet-safe-selfdestruct.json  privatenet-safe-sstore-sender.json  privatenet-safe-sstore.json  privatenet-simple-ue.json  privatenet-u8-overflow.json  privatenet-ue.json  privatenet-unsafe-call-data.json  privatenet-unsafe-call.json  privatenet-unsafe-delegate.json  privatenet-unsafe-selfdestruct.json  privatenet-unsafe-sstore.json  regular_trace_0xdd77a7d375e.json  stripped_trace_0xdd77a7d375e.json  unsafe-sstore-0x05f71e1b2cb4f03e547739db15d080fd30c989eda04d37ce6264c5686e0722c9.json
test/fixtures/contracts/: IntegerOverflow.sol  UnhandledException.sol  UnrestrictedAction.sol
