opam-version: "2.0"
name: "evm-analyzer"
version: "0.1"
synopsis: "Analysis tool for EVM"
maintainer: "Daniel Perez <daniel@perez.sh>"
authors: "Daniel Perez <daniel@perez.sh>"
license: "MIT"
homepage: "https://github.com/danhper/evm-analyzer"
bug-reports: "https://github.com/danhper/evm-analyzer"
build: ["dune" "build" "--root" "." "-j" jobs "@install"]
depends: [
  "core"                    {>= "v0.12" & < "v0.13"}
  "yojson"                  {>= "1.5.0" & < "2.0"}
  "zarith"                  {>= "1.7"   & < "2.0"}
  "ppx_import"              {>= "1.5"   & < "2.0"}
  "ppx_deriving"            {>= "4.2"   & < "5.0"}
  "caqti"                   {>= "1.0"   & < "2.0"}
  "caqti-driver-postgresql" {>= "1.0"   & < "2.0"}
  "caqti-lwt"               {>= "1.0"   & < "2.0"}
  "rpclib-lwt"              {>= "5.9"   & < "6.0"}
  "cohttp-lwt-unix"         {>= "1.2"   & < "2.0"}
  "ppx_deriving_rpc"        {>= "7.0"   & < "8.0"}
  "ppx_deriving_yojson"     {>= "3.0"   & < "4.0"}
  "camlzip"                 {>= "1.0"   & < "2.0"}

  "monads"
  "datalog"

  "dune"                {build & >= "1.0" & < "2.0"}

  "alcotest"            {with-test & >= "1.0" & < "2.0"}
]
