(rule
  (targets "generated.ml")
  (deps ../datalog/clauses.pl)
  (action (run ../scripts/create_generated_module.sh)))

(library
  (name evm_analyzer)
  (libraries core yojson zarith datalog.caml_interface)
  (preprocess
    (staged_pps ppx_import ppx_let ppx_deriving ppx_deriving.show ppx_fields_conv))
  (public_name evm-analyzer))
